[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stochastic-bed"
version = "0.1.0"
description = "Location finding and active causal discovery experiments for stochastic policies in Bayesian experimental design (BED)."
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.2",
    "scipy>=1.16",
    "torch>=2.5",
    "matplotlib>=3.10",
    "bayesflow>=2.0",
    "keras>=3.0",
]

[tool.ruff]
line-length = 100

[dependency-groups]
dev = [
    "ruff>=0.15.20",
]
